build docker image on mvn compile

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,14 @@
                         <image>camel-jib:${project.version}</image>
                     </to>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
